--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+}
+button {
+  border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.active {
+  background-color: blueviolet;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  background-color: aqua;
+}
+nav a {
+  margin: 0 10px;
+  padding: 8px;
+  border-radius: 3px;
+  transition: 0.1s;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* add book */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 400px;
+  width: 400px;
+  margin: 30px auto;
+  background-color: #ffe5f1;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.form-container h2 {
+  margin-bottom: 10px;
+  color: rgb(46, 44, 44);
+}
+.form-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.form-container form input {
+  width: 300px;
+  padding: 8px;
+  margin: 6px 0;
+  outline: none;
+}
+.form-container form input:focus {
+  background-color: rgb(236, 236, 213);
+  border: 2px solid rgb(167, 106, 236);
+}
+.form-container form button {
+  margin-top: 10px;
+  background-color: rgb(141, 94, 185);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.form-container form button:hover {
+  background-color: rgb(124, 65, 179);
+}
+
+/* home */
+.book-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px 0;
+}
+.book-container h2 {
+  margin-bottom: 10px;
+  color: rgb(46, 44, 44);
+}
+table {
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1px solid black;
+  padding: 1rem;
+}
+table thead tr {
+  color: rgb(69, 221, 89);
+}
+.table-btn {
+  padding: 7px 15px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 3px;
+  color: white;
+}
+.table-btn:hover {
+  background-color: rgb(132, 77, 184);
+}
+.edit-btn {
+  background-color: rgb(112, 192, 112);
+}
+.delete-btn {
+  background-color: rgb(255, 55, 55);
 }
